@@ -143,7 +143,9 @@ for showing implicit rules,
 .I j
 for details on invocation of commands, and
 .I m
-for debugging while remaking makefiles.
+for debugging while remaking makefiles.  Use
+.I n
+to disable all previous debugging flags.
 .TP 0.5i
 \fB\-e\fR, \fB\-\-environment\-overrides\fR
 Give variables taken from the environment precedence
